css class - fix-search : z-index:4
css class - fix-search : z-index:4

--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -547,6 +547,7 @@ input[type="radio"]{
 .fix-search {
     position: fixed;
     top: 0px;
+    z-index: 6;
 }
 /** #69 - Scroll - **/
 
